--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -20,4 +20,4 @@ jobs:
     with:
       project_target: "TuistUI"
       hosting_path: "tuistui"
-      token: "${{ secrets.GH_TOKEN }}"
+      token: ${{ secrets.GH_TOKEN }}
