--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: docc-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   docc:
     name: Docc
