--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,16 @@ concurrency:
 
 jobs:
     macos:
-        name: macos 14
-        runs-on: macos-14
+        name: macos 15
+        runs-on: macos-15
         strategy:
           matrix:
             config:
               - debug
               - release
         steps:
-            - uses: swift-actions/setup-swift@v2
-            - name: Get swift version
-              run: swift --version
+            - name: Select Xcode 16.2
+              run: sudo xcode-select -s /Applications/Xcode_16.2.app
             - name: Checkout Package
               uses: actions/checkout@v4
               with:
