--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,21 @@ concurrency:
 
 jobs:
     macos:
-        name: macos 15
-        runs-on: macos-15
+        name: macos 26
+        runs-on: macos-26
         strategy:
           matrix:
+            xcode: ["26.1"]
             config:
               - debug
               - release
         steps:
-            - name: Select Xcode 16.2
-              run: sudo xcode-select -s /Applications/Xcode_16.2.app
+            - name: Select Xcode ${{ matrix.xcode }}
+                run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+            - name: Show Xcode and Swift versions
+                run: |
+                xcodebuild -version
+                swift --version
             - name: Checkout Package
               uses: actions/checkout@v4
               with:
