--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,13 @@ on:
 jobs:
   macos:
     name: Release Tuist Plugin Zip
-    runs-on: macos-15
+    runs-on: macos-26
+    strategy:
+      matrix:
+        xcode: ["26.1"]
     steps:
-      - name: Select Xcode 16.2
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app
+      - name: Select Xcode
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Tuist
